@@ -4,6 +4,7 @@
 
 === 1.0.17 ===
 * Fixed invalid memory read on OSC protocol pattern matching.
+* The i18n JsonDictionary is forced to be UTF-8. 
 
 === 1.0.16 ===
 * Fixed potential problem with invalid delete in io::PathPattern.
